--- a/wiki/DevGuide.wiki
+++ b/wiki/DevGuide.wiki
@@ -1,3 +1,5 @@
+#summary Guide for those who want to start developing the game
+
 = Developer's Guide =
 
 This is a short guide for those who want to start developing the game.
